--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "next": "16.1.1",
     "next-intl": "^4.7.0",
+    "nodemailer": "^6.9.4",
+    "flatpickr": "^4.6.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
